--- a/blogicum/templates/blog/detail.html
+++ b/blogicum/templates/blog/detail.html
@@ -1,21 +1,20 @@
 {% extends "base.html" %}
-{% load static %}
 {% block title %} {{ post.location }}. {{ post.date }} {% endblock %}
 {% block content %}
   <article>
     <ul>
       <li>
-        Место: {{ post.location }}              
+        Место: {{ post.location }}
       </li>
       <li>
-        Дата: {{ post.date }} 
+        Дата: {{ post.date }}
       </li>
       <li>
         Категория: <a href="{% url 'blog:category_posts' post.category %}">{{ post.category }} </a>
       </li>
-    </ul>     
+    </ul>
     <p>
-      {{ post.text }}
+      <br>{{ post.text }}
     </p>
   </article>
 {% endblock %}
