--- a/blogicum/templates/includes/header.html
+++ b/blogicum/templates/includes/header.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% with view=request.resolver_match.view_name %}
 
 <header>
   <nav class="navbar navbar-light" style="background-color: lightskyblue">
@@ -6,24 +7,25 @@
       <a class="navbar-brand" href="{% url 'blog:index' %}">
         <img src="{% static 'img/logo.png' %}" width="30" height="30" class="d-inline-block align-top" alt="">
         Блогикум
-      </a>        
+      </a>
       <ul class="nav  nav-pills">
         <li class="nav-item">
-          <a class="nav-link active" href="{% url 'blog:index' %}">
+          <a class="nav-link {% if view == 'blog:index' %}active{% endif %}" href="{% url 'blog:index' %}" Index>
             Лента записей
           </a>
         </li>
-        <li class="nav-item">              
-          <a class="nav-link" href="{% url 'pages:about' %}">
+        <li class="nav-item">
+          <a class="nav-link {% if view == 'pages:about' %}active{% endif %}" href="{% url 'pages:about' %}" About>
             О проекте
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'pages:rules' %}">
+          <a class="nav-link {% if view == 'pages:rules' %}active{% endif %}" href="{% url 'pages:rules' %}"Rules>
             Наши правила
           </a>
         </li>
-      </ul>      
+      </ul>
     </div>
-  </nav> 
+  </nav>
 </header>
+{% endwith %}
