--- a/blogicum/templates/blog/detail.html
+++ b/blogicum/templates/blog/detail.html
@@ -14,7 +14,7 @@
       </li>
     </ul>
     <p>
-      <br>{{ post.text }}
+      {{ post.text|linebreaks }}
     </p>
   </article>
 {% endblock %}
